--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             align-items: center;
             background: #99e6ff;
             background-image: url("https://images.unsplash.com/photo-1604937455095-ef2fe3d46fcd?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+            background-repeat:no-repeat;
+            background-size:cover;
         }
 
         .info {
